Refactor series generation logic to improve card matrix construction and enhance code readability